@@ -16,6 +16,9 @@
     gained a \code{tidy} argument, which enables conversion to the
     long data format and is also available as function \code{tidy.sts()}.
 
+    \item A \CRANpkg{ggplot2} variant of \code{stsplot_time()} is now
+    available via \code{autoplot.sts()}.
+    
     \item \code{as.epidata.data.frame()} gained an argument
     \code{max.time} to specify the end of the observation period (which
     by default coincides with the last observed event).
